# autoimport

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .safety-policy.yml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
.github/workflows/: build.yml  install.yml  tests.yml  update.yml
adr/001-high_level_problem_analysis/: index.html
adr/002-initial_program_design/: index.html
adr/adr/: index.html
contributing/: index.html
docs/: contributing.md  editor_integration.md  index.md  reference.md  requirements.in  requirements.txt
docs/adr/: adr.md
docs/examples/: simple-example.py
editor_integration/: index.html
reference/: index.html
search/: search_index.json
src/autoimport/: __init__.py  __main__.py  config.py  model.py  services.py  utils.py  version.py
src/autoimport/adapters/: __init__.py
src/autoimport/entrypoints/: __init__.py  cli.py
stylesheets/: links.css
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_config.py  test_entrypoints.py  test_extract_package.py  test_services.py  test_utils.py  test_version.py
