# --------- Commitizen -------------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

# --------- Black -------------

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

# --------- Pytest -------------

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --tb=short"
python_paths = "."
norecursedirs = [
    ".tox",
    ".git",
    "*/migrations/*",
    "*/static/*",
    "docs",
    "venv",
    "*/Autoimport/*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "secondary: mark tests that use functionality tested in the same file (deselect with '-m \"not secondary\"')"
]

# --------- Isort -------------

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

# --------- Flakehell -------------

[tool.flakehell]
# exclude = ["example.py", "setup.py", "README.rst"]
format = "grouped"
max_line_length = 88
show_source = true
docstring-convention= "google"

[tool.flakehell.plugins]
flake8-aaa = ["+*"]
flake8-annotations = ["+*"]
flake8-annotations-complexity = ["+*"]
flake8-bugbear = ["+*"]
flake8-comprehensions = ["+*"]
flake8-debugger = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-expression-complexity = ["+*"]
flake8-fixme = ["+*"]
flake8-markdown = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest = ["+*"]
flake8-pytest-style = ["+*"]
flake8-simplify = ["+*"]
flake8-use-fstring = ["+*"]
flake8-typing-imports = ["+*"]
flake8-variables-names = ["+*"]
dlint = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]
# pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

# --------- Build-system -------------

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
